--- a/css/main.sass
+++ b/css/main.sass
@@ -23,10 +23,12 @@
 *
     margin: 0
     padding: 0
-.slick-list
+.bx-viewport
     height: 660px !important
-    .slick-track
-        margin-top: 690px
+.bx-wrapper
+    box-shadow: none
+li
+    list-style: none
 .container
     width: 1366px
     display: flex
@@ -62,6 +64,11 @@
         font-weight: bold
         margin-left: 24px
         font-size: 21px
+        &:focus
+            background: white
+            color: #010b13
+            outline: none
+
 body
     header
         font-family: 'Roboto_Condensed_Bold', sans-serif
@@ -229,12 +236,11 @@ body
                             width: 60px
                             height: 60px
                             border-radius: 50%
-                            background: #0b1922 
-                            opacity: 0.3
+                            background: url('../svg/ellipse.png') 
                             display: flex
-                            justify-content: center
                             align-items: center
                             img
+                                margin-left: 20px
                                 width: 23px
                                 height: 23px
                     .rating
@@ -294,6 +300,8 @@ body
                         .read-more
                             color: #389ef2
                             font-size: 18px
+                            &:hover
+                                color: #8eccff
     footer
         color: white
         font-family: "RobotoCondensed-Italic"
